--- a/assets/css/animations.css
+++ b/assets/css/animations.css
@@ -15,14 +15,21 @@ from {text-shadow:
     0 0 60px rgba(30,132,242,1);}
 }
 @keyframes neon-box {
-    from {box-shadow: 0 0 6px rgba(202, 228, 225, 0.92),0 0 24px rgba(202, 228, 225, 0.34), 0 0 9.6px rgba(30, 132, 242, 0.52), 0 0 16.8px rgba(30, 132, 242, 0.92), 0 0 27.2px rgba(30, 132, 242, 0.78), 0 0 43.2px rgba(30, 132, 242, 0.92);}
+    from {box-shadow:
+    0 0 6px rgba(202, 228, 225, 0.92),
+    0 0 24px rgba(202, 228, 225, 0.34),
+    0 0 9.6px rgba(30, 132, 242, 0.52),
+    0 0 16.8px rgba(30, 132, 242, 0.92),
+    0 0 27.2px rgba(30, 132, 242, 0.78),
+    0 0 43.2px rgba(30, 132, 242, 0.92);}
     to {box-shadow:
     0 0 6px rgba(202, 228, 225, 0.98),
     0 0 24px rgba(202, 228, 225, 0.42),
     0 0 9.6px rgba(30, 132, 242, 0.58),
-    0 0 17.6px rgba(30, 132, 242, 0.84), 0 0 30.4px rgba(30, 132, 242, 0.88), 0 0 48px rgba(30, 132, 242, 1);}
+    0 0 17.6px rgba(30, 132, 242, 0.84),
+    0 0 30.4px rgba(30, 132, 242, 0.88),
+    0 0 48px rgba(30, 132, 242, 1);}
 }
-/* menu-list opening animation */
  @keyframes clipPathCircleOpen {
      0% {
         clip-path: circle(0% at top right);
@@ -39,7 +46,6 @@ from {text-shadow:
         clip-path: circle(0% at top right);
     }
 }
-/* ascii alien face animation */
  @keyframes creepshow {
      0% {
         color:var(--shadow-grey);
@@ -55,7 +61,6 @@ from {text-shadow:
         )
     }
 }
-/* image modal opening-closing */
  @-webkit-keyframes show {
      from {
         transform: translateY(-110%);
@@ -69,15 +74,6 @@ from {text-shadow:
         transform: translateY(-110%);
     }
 }
-@keyframes text-banner {
-    0% {
-        transform: translateX(100%);
-    }
-    100% {
-        transform: translateX(-100%);
-    }
-}
-/*  */
  //@keyframes bg-animation {
      0% {
         transform: translate(0,0)
