--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,51 @@
-section {
+/* reduced motion option */
+@media (prefers-reduced-motion: reduce) {
+    /* Remove all animations, transitions and smooth scroll if preferd */
+     html:focus-within {
+         scroll-behavior: auto;
+    }
+     *, *::before, *::after {
+         animation-duration: 0.01ms !important;
+         animation-iteration-count: 1 !important;
+         scroll-behavior: auto !important;
+         transition-duration: 0.01ms !important;
+    }
+}
+@media screen and (min-width: 35em) {
+    .grid-container {grid-template-areas:
+        "one one"
+        "two three"
+        "five five"
+        "four four";
+    }
+}
+@media screen and (min-width: 38em) {
+    .grid-container {grid-template-areas:
+        "one one"
+        "two five"
+        "three five"
+        "four four";
+    }
+}
+@media screen and (min-width: 54em) {
+    .grid-container {grid-template-areas:
+        "one one two"
+        "five five five"
+        "three four four";
+    }
+}
+@media screen and (min-width: 75em) {
+    .grid-container {grid-template-areas:
+        "one one two five"
+        "three four four five";
+    }
+}
+@media screen and (max-width: 54em) {
+    #table_01 {
+    display:none;
+    }
+}
+.catchem {
     justify-content: space-evenly;
     position: relative;
     width: 100%;
@@ -26,11 +73,10 @@ caption {
     caption-side: top;
     margin: 0.3rem;
     font-weight: bold;
-    color: var(--matrix-green);}
+    color: var(--matrix-green);
 }
 aside {
     position:relative;
-    display:block;
     width:75%;
 }
 code {
@@ -52,22 +98,178 @@ mark {
     color: revert;
     font-size: 0.85em;
 }
+.top-right{
+    display:none;
+}
+.animated-banner{
+    display:none;
+}
+.ascii-mascot{
+    display:none;
+}
 .error-page {
     position:relative;
     min-width:65vw;
     justify-content: center;
     text-align:center;
 }
-.zitiert {
-    font-size:x-small;
-    width: 100%;
-    line-height: 0;
-    text-align: center;
-}
-.bsp-txt {
-    font-size:small;
+.more-text {
+    font-size:smaller;
     text-align:left;
     width: 100%;
 }
-
+.zitiert {
+    display:block;
+    font-size:x-small;
+    font-weight:lighter;
+    width: 100%;
+    text-align: center;
+}
+.quiz-answers {
+    animation: neon 0.08s ease-in-out infinite alternate;
+    transition: all ease-in-out 300ms;
+    color: var(--neon-pink);
+    width: 100%;
+    text-align:match-parent;
+    font-family:'c64-Pro';
+    display:inline-block;
+    font-size: large;
+}
+.domain-font {
+    font-family: 'Sarpanch', sans-serif;
+    letter-spacing: 0.23rem;
+}
+.keyboard-styled span {
+    background-color: #333;
+    border-radius: 3px;
+    border: 1px solid #000;
+    color: #fff;
+    display: inline-block;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 0.65em;
+    font-weight: 700;
+    height: 18px;
+    line-height: 1.6em;
+    outline: none;
+    padding: 0.1em 0.6em 0.1em;
+    text-align: center;
+    text-shadow: none;
+    box-shadow: 0 3px 0 rgba(0,0,0,0.25),
+    inset 0 2px 0 rgba(170,170,170,0.8);
+}
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 2vh 5vw 12vh 3vw;
+    vertical-align: middle;
+    width: 100%;
+    height:100%;
+}
+.leftside-profil-icons,
+.rightside-site-features {
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+}
+.leftside-profil-icons > * {
+    left: 0;
+    margin-right: 3vw;
+}
+.rightside-site-features > * {
+    right: 0;
+    margin-left: 3vw;
+}
+.this_page-intro {
+    font-size:small;
+    width: 100%;
+}
+.this_too_deep{}
+.this_personal_statements{}
+.quiz-area
+.site-topics
+#site-slogan{
+    display:none;
+}
+#page-slogan{
+    display:none;
+}
+#smiles-friendly {
+    align-items: center;
+    animation: creepshow 60s infinite;
+    color: var(--shadow-grey);
+    display: flex;
+    font-size:x-small;
+    height: 100vh;
+    justify-content: center;
+    margin: 0;
+    text-shadow:none;
+}
+#spooks-creepy {
+    align-items: center;
+    animation: creepshow 60s infinite;
+    color: var(--shadow-grey);
+    display: flex;
+    font-size:x-small;
+    height: 100vh;
+    justify-content: center;
+    margin: 0;
+    text-shadow:none;
+}
+#banner {
+    transform: translateZ(0);
+    animation: glow-pink 0.08s ease-in-out infinite alternate;
+    background-color: transparent;
+    color: var(--neon-pink);
+    font-size:smaller;
+    justify-content: center;
+    position: relative;
+}
+#UAP > *{
+    animation: neon 0.08s ease-in-out infinite alternate;
+    color: var(--neon-pink);
+}
+#this_hello_world h1{animation-delay:2s}
+#table_01 {
+    position: relative;
+    text-align: center;
+    table-layout: fixed;
+}
+#table_02 {
+    position: relative;
+    text-align: center;
+    padding:0.6em 0;
+    border: 1px solid #000;
+    border-radius:0.5rem;
+    background-color:var(--high-ground);
+    table-layout: fixed;
+    outline: none;
+    box-shadow:var(--ants-cry);
+}
+#this_milestones{}
+#this_whoami{}
+#instagram-link {
+    cursor: pointer;
+    width:30px;
+    height:30px;
+}
+#contact-email {
+    animation: neon 0.08s ease-in-out infinite alternate;
+    background-color: var(--shadow-grey);
+    color: var(--laser-blue);
+    font-family: 'Sarpanch', sans-serif;
+    font-size: 1.337rem;
+    font-weight: 200;
+    letter-spacing: 0.12em;
+    text-decoration: none;
+}
+#export-icon {
+    cursor: default;
+}
+#goto-top {
+    cursor: pointer;
+}
+#analyzer {
+    display:flex;
+    justify-content:center;
+}
 
