--- a/mjsecurity/assets/css/style.css
+++ b/mjsecurity/assets/css/style.css
@@ -1,40 +1,51 @@
-@font-face {
-font-family:'Sarpanch';font-style:normal;src:
-url('../fonts/sarpanch-v11-latin-regular.woff2')
-/* Super Modern Browsers */ format('woff2'),
-url('../fonts/sarpanch-v11-latin-regular.woff')
-/* Modern Browsers */ format('woff'),
-url('../fonts/sarpanch-v11-latin-regular.ttf')
-/* Safari, Android, iOS */ format('truetype'),
-url('../fonts/sarpanch-v11-latin-regular.svg#Sarpanch') /* Legacy iOS */ format('svg');
+/* reduced motion option */
+@media (prefers-reduced-motion: reduce) {
+    /* Remove all animations, transitions and smooth scroll if preferd */
+     html:focus-within {
+         scroll-behavior: auto;
+    }
+     *, *::before, *::after {
+         animation-duration: 0.01ms !important;
+         animation-iteration-count: 1 !important;
+         scroll-behavior: auto !important;
+         transition-duration: 0.01ms !important;
+    }
 }
-@font-face {
-font-family:'c64-Pro';font-style:normal;src:
-url('../fonts/C64_Pro-STYLE.woff2')
-/* Super Modern Browsers */ format('woff2'),
-url('../fonts/C64_Pro-STYLE.woff')
-/* Modern Browsers */ format('woff'),
-url('../fonts/C64_Pro-STYLE.ttf')
-/* Safari, Android, iOS */ format('truetype');
+@media screen and (min-width: 35em) {
+    .grid-container {grid-template-areas:
+        "one one"
+        "two three"
+        "five five"
+        "four four";
+    }
 }
-/* Colors for Words */
-.r{color:#FF1337 !important }
-.g{color:#A3B8C8 !important }
-.b{color:#1337FF !important }
-.y{color:#FFFF00 !important }
-.c{color:#119988 !important }
-.m{color:#FF00FF !important }
-.o{color:#FFA500 !important }
-.p{color:var(--neon-pink) !important }
-body::-webkit-scrollbar {
-/* Scrollleiste ausblenden */
-    background-color: #000;
-    display: none;
-    width: 3px;
-    min-height: 100vh;
+@media screen and (min-width: 38em) {
+    .grid-container {grid-template-areas:
+        "one one"
+        "two five"
+        "three five"
+        "four four";
+    }
 }
-
-section {
+@media screen and (min-width: 54em) {
+    .grid-container {grid-template-areas:
+        "one one two"
+        "five five five"
+        "three four four";
+    }
+}
+@media screen and (min-width: 75em) {
+    .grid-container {grid-template-areas:
+        "one one two five"
+        "three four four five";
+    }
+}
+@media screen and (max-width: 54em) {
+    #table_01 {
+    display:none;
+    }
+}
+.catchem {
     justify-content: space-evenly;
     position: relative;
     width: 100%;
@@ -62,19 +73,11 @@ caption {
     caption-side: top;
     margin: 0.3rem;
     font-weight: bold;
-    color: var(--matrix-green);}
+    color: var(--matrix-green);
 }
 aside {
     position:relative;
-    display:block;
     width:75%;
-}
-q, cite {
-    font-size:x-small;
-    margin-left:3.7vw;
-    width: 100%;
-    line-height: 0;
-    text-align: center;
 }
 code {
     display: inline-table;
@@ -95,140 +98,14 @@ mark {
     color: revert;
     font-size: 0.85em;
 }
-header {
-    align-items: center;
-    background-color: var(--shadow-grey);
-    display: flex;
-    font-family: 'Sarpanch', sans-serif;
-    font-size: 1.8rem;
-    height: 55px;
-    justify-content: space-between;
-    letter-spacing: 0.23rem;
-    position: relative;
-    text-shadow: 1.5px 2px #000;
-    box-shadow:var(--space-motion);
+.top-right{
+    display:none;
 }
-.header-content {
-    transform: translateZ(0);
-    align-items: center;
-    display: inline-block;
-    vertical-align: middle;
-    transform: translateZ(0);
-    text-shadow: 1.5px 2px #000;
-    animation: neon .08s ease-in-out infinite alternate;
+.animated-banner{
+    display:none;
 }
-header::after {
-    clear: both;
-    content: "";
-    display: block;
-}
-header a {
-    color: var(--laser-blue);
-    text-decoration: none;
-}
-header a:hover,
-header a:focus {
-    animation: neon .08s ease-in-out infinite alternate;
-    outline: none;
-    color: var(--neon-pink);
-    text-shadow: none;
-}
-.menu-list {
-    transform: translateZ(0);
-    background-color: var(--shadow-grey);
-    border-bottom-left-radius: 0.5rem;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    right: 0;
-    top: 54px;
-    transition: clip-path ease-in-out 350ms;
-    z-index: 1;
-    box-shadow:var(--space-motion);
-}
-.menu-button {
-    background-color: transparent;
-    border-radius: 2px;
-    border: 0;
-    cursor: pointer;
-    margin: 8px;
-    padding: 18px;
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-.hidden-menu {
-    clip-path: inset(50%);
-    clip: rect(0, 0, 0, 0);
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    box-shadow:var(--space-motion);
-    white-space: nowrap;
-    width: 1px;
-}
-.menu-icon,
-.menu-icon::before,
-.menu-icon::after {
-     background-color: var(--laser-blue);
-     border-radius: 2px;
-     content: "";
-     display: block;
-     height: 3px;
-     transition: all ease-in-out 400ms;
-     width: 25px;
-}
-.menu-icon::before {
-     transform: translateY(-6px);
-}
-.menu-icon::after {
-     transform: translateY(3px);
-}
-[aria-expanded="true"] .menu-icon {
-     transform: rotate(45deg);
-    animation: neon-box .08s ease-in-out infinite alternate;
-}
-[aria-expanded="true"] .menu-icon::before {
-     opacity: 0;
-    animation: neon-box .08s ease-in-out infinite alternate;
-}
-[aria-expanded="true"] .menu-icon::after {
-    transform: translateY(-3px) rotate(-90deg);
-    animation: neon-box .08s ease-in-out infinite alternate;
-}
-.menu-list a {
-    border-bottom-left-radius: 0.35rem;
-    transform: scaleY(1.2);
-    color: var(--laser-blue);
-    display: block;
-    font-family: 'Sarpanch', sans-serif;
-    font-size: 24px;
-    margin: 0 24px 0 0;
-    padding: 20px 1vw;
-    text-align: left;
-    text-decoration: none;
-    text-transform: uppercase;
-    text-shadow: 1.5px 2px #000;
-}
-.menu-list[data-state="opened"] {
-    animation: clipPathCircleOpen 300ms ease-in-out forwards;
-    display: block;
-}
-.menu-list[data-state="closing"] {
-    animation: clipPathCircleClose 300ms ease-in-out forwards;
-}
-.menu-list[data-state="closed"] {
-    display: none;
-}
-.list-icon {
-     align-items: center;
-     display: inline-block;
-     width: 30px;
-     padding: 0 4px;
-     margin: 0 18px;
-     text-align: left;
-     vertical-align: middle;
+.ascii-mascot{
+    display:none;
 }
 .error-page {
     position:relative;
@@ -236,5 +113,163 @@ header a:focus {
     justify-content: center;
     text-align:center;
 }
-
+.more-text {
+    font-size:smaller;
+    text-align:left;
+    width: 100%;
+}
+.zitiert {
+    display:block;
+    font-size:x-small;
+    font-weight:lighter;
+    width: 100%;
+    text-align: center;
+}
+.quiz-answers {
+    animation: neon 0.08s ease-in-out infinite alternate;
+    transition: all ease-in-out 300ms;
+    color: var(--neon-pink);
+    width: 100%;
+    text-align:match-parent;
+    font-family:'c64-Pro';
+    display:inline-block;
+    font-size: large;
+}
+.domain-font {
+    font-family: 'Sarpanch', sans-serif;
+    letter-spacing: 0.23rem;
+}
+.keyboard-styled span {
+    background-color: #333;
+    border-radius: 3px;
+    border: 1px solid #000;
+    color: #fff;
+    display: inline-block;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 0.65em;
+    font-weight: 700;
+    height: 18px;
+    line-height: 1.6em;
+    outline: none;
+    padding: 0.1em 0.6em 0.1em;
+    text-align: center;
+    text-shadow: none;
+    box-shadow: 0 3px 0 rgba(0,0,0,0.25),
+    inset 0 2px 0 rgba(170,170,170,0.8);
+}
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 2vh 5vw 12vh 3vw;
+    vertical-align: middle;
+    width: 100%;
+    height:100%;
+}
+.leftside-profil-icons,
+.rightside-site-features {
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+}
+.leftside-profil-icons > * {
+    left: 0;
+    margin-right: 3vw;
+}
+.rightside-site-features > * {
+    right: 0;
+    margin-left: 3vw;
+}
+.this_page-intro {
+    font-size:small;
+    width: 100%;
+}
+.this_too_deep{}
+.this_personal_statements{}
+.quiz-area
+.site-topics
+#site-slogan{
+    display:none;
+}
+#page-slogan{
+    display:none;
+}
+#smiles-friendly {
+    align-items: center;
+    animation: creepshow 60s infinite;
+    color: var(--shadow-grey);
+    display: flex;
+    font-size:x-small;
+    height: 100vh;
+    justify-content: center;
+    margin: 0;
+    text-shadow:none;
+}
+#spooks-creepy {
+    align-items: center;
+    animation: creepshow 60s infinite;
+    color: var(--shadow-grey);
+    display: flex;
+    font-size:x-small;
+    height: 100vh;
+    justify-content: center;
+    margin: 0;
+    text-shadow:none;
+}
+#banner {
+    transform: translateZ(0);
+    animation: glow-pink 0.08s ease-in-out infinite alternate;
+    background-color: transparent;
+    color: var(--neon-pink);
+    font-size:smaller;
+    justify-content: center;
+    position: relative;
+}
+#UAP > *{
+    animation: neon 0.08s ease-in-out infinite alternate;
+    color: var(--neon-pink);
+}
+#this_hello_world h1{animation-delay:2s}
+#table_01 {
+    position: relative;
+    text-align: center;
+    table-layout: fixed;
+}
+#table_02 {
+    position: relative;
+    text-align: center;
+    padding:0.6em 0;
+    border: 1px solid #000;
+    border-radius:0.5rem;
+    background-color:var(--high-ground);
+    table-layout: fixed;
+    outline: none;
+    box-shadow:var(--ants-cry);
+}
+#this_milestones{}
+#this_whoami{}
+#instagram-link {
+    cursor: pointer;
+    width:30px;
+    height:30px;
+}
+#contact-email {
+    animation: neon 0.08s ease-in-out infinite alternate;
+    background-color: var(--shadow-grey);
+    color: var(--laser-blue);
+    font-family: 'Sarpanch', sans-serif;
+    font-size: 1.337rem;
+    font-weight: 200;
+    letter-spacing: 0.12em;
+    text-decoration: none;
+}
+#export-icon {
+    cursor: default;
+}
+#goto-top {
+    cursor: pointer;
+}
+#analyzer {
+    display:flex;
+    justify-content:center;
+}
 
