big changes offline

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -309,7 +309,9 @@ footer {
 }
 .content h2 {
     color: var(--matrix-green);
-    width: 100%; text-align: center;
+    width: 100%;
+    text-align: center;
+    
 }
 .content h3 {
     color: var(--matrix-green);
@@ -318,7 +320,6 @@ footer {
 }
 .content h4 {
     width: 100%;
-    text-align:center;
     color: var(--matrix-green);
 }
 .content p {
@@ -341,7 +342,7 @@ footer {
     color:#FFF;
     font-weight: bold;
 }
-.content img {
+.flex img {
     width: 100%;
     box-shadow:var(--ants-cry);
     border-radius: 0.35rem;
@@ -403,7 +404,7 @@ figure > img {
     margin-bottom:2vw;
 }
 figcaption > h2 {
-    font-size:4vw;
+    font-size:3vw;
     margin:0;
 }
 details {
